ci: use `nix-installer`
Signed-off-by: Roman Volosatovs <rvolosatovs@riseup.net>

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,12 +19,10 @@ jobs:
     runs-on: ${{ matrix.host }}
     steps:
     - uses: actions/checkout@v3
-    - uses: nixbuild/nix-quick-install-action@v22
+    - uses: DeterminateSystems/nix-installer-action@v2
       with:
-        nix_conf: |
+        extra-conf: |
           accept-flake-config = true
-          access-tokens = github.com=${{ github.token }}
-          experimental-features = nix-command flakes
     - uses: cachix/cachix-action@v12
       with:
         name: rvolosatovs
