ci: use latest images
Signed-off-by: Roman Volosatovs <rvolosatovs@riseup.net>

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,8 +14,8 @@ jobs:
     strategy:
       matrix:
         host: 
-        - macos-12
-        - ubuntu-22.04
+        - macos-latest
+        - ubuntu-latest
     runs-on: ${{ matrix.host }}
     steps:
     - uses: actions/checkout@v3
